<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_subject">Add Subject</string>
    <string name="app_name">WGSB</string>
    <string name="background">Background</string>
    <string name="backup_failed_bug">Backup failed- If you can see this, report it as a bug!</string>
    <string name="backup_failed_sd">Backup failed - Your SD card could not be written to</string>
    <string name="backup_successful">Backup successful!</string>
    <string name="calendar">Calendar</string>
    <string name="cancel">Cancel</string>
    <string name="clear_data">Clear all data?</string>
    <string name="clear_data_confirm">Are you sure you want to clear all data? </string>
    <string name="compact">Compact</string>
    <string name="compact_detail">Compact Detail</string>
    <string name="dark">Dark</string>
    <string name="done">Done</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="email">Email</string>
    <string name="email_no_clients">There are no email clients installed.</string>
    <string name="expanded">Expanded</string>
    <string name="friday_caps">FRIDAY</string>
    <string name="friday_short">Fri</string>
    <string name="full_name">Full Name</string>
    <string name="gcm_no">no</string>
    <string name="gcm_play_services_error_extra">Google Play Services not detected, please install this first.</string>
    <string name="gcm_play_services_error">Google Play Services Error</string>
    <string name="gcm_yes">yes</string>
    <string name="internet_connection_error">Internet Connection Error</string>
    <string name="internet_connection_error_extra">Please connect to working Internet connection</string>
    <string name="light">Light</string>
    <string name="loading">Loading…</string>
    <string name="monday_caps">MONDAY</string>
    <string name="monday_short">Mon</string>
    <string name="name">Name</string>
    <string name="news">News</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="no_events">No Events</string>
    <string name="no_internet">There was an error connecting to the internet to retrieve the initial data.  \n\nPlease check your device settings and make sure your device has full internet access</string>
    <string name="no_internet_refresh">There was an error connecting to the internet to refresh the data.  \n\nPlease check your device settings and make sure your device has full internet access</string>
    <string name="no_working_connection">Please connect to a working internet connection</string>
    <string name="notifications">Notifications</string>
    <string name="now">Now</string>
    <string name="ok">OK</string>
    <string name="previous">Previous</string>
    <string name="push">Push Notifications</string>
    <string name="push_need_on">Push notifications need to be on to show alerts</string>
    <string name="push_summary">Toggle whether to receive push message alerts.</string>
    <string name="refresh">Refresh</string>
    <string name="register">Register</string>
    <string name="register_encryption_note">*Note: Your details are encrypted before being sent to our server.</string>
    <string name="restore">Restore from backup?</string>
    <string name="restore_confirm">Are you sure you want to restore? You will lose your current timetable </string>
    <string name="restore_detected_backup">Backup detected. Restore it?</string>
    <string name="restore_failed_dir">Restore failed - Directory not found (/sdcard/WGSB/backup/)</string>
    <string name="restore_failed_file">Restore failed - File not found (/sdcard/WGSB/backup/backup.txt)</string>
    <string name="restore_failed_invalid">Restore failed - Invalid backup file</string>
    <string name="restore_failed_read">Restore failed - Your SD card couldn\'t be read from</string>
    <string name="restore_success">Restore successful!</string>
    <string name="restoring">Restoring…</string>
    <string name="room">Room</string>
    <string name="saturday_short">Sat</string>
    <string name="select_compact_detail">Select Compact Detail</string>
    <string name="server_register_error">Could not register device on WGSB Server after %1$d attempts.</string>
    <string name="server_registered">From WGSB Server: successfully added device!</string>
    <string name="settings">Settings</string>
    <string name="sunday_short">Sun</string>
    <string name="switch_weeks">Switch Weeks</string>
    <string name="then">Then</string>
    <string name="thursday_caps">THURSDAY</string>
    <string name="thursday_short">Thurs</string>
    <string name="time">Time</string>
    <string name="timetable_break">Break</string>
    <string name="timetable">Timetable</string>
    <string name="timetable_settings">Timetable Settings</string>
    <string name="today">Today</string>
    <string name="topical_information">Topical Information</string>
    <string name="tuesday_caps">TUESDAY</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_caps">WEDNESDAY</string>
    <string name="wednesday_short">Wed</string>
    <string name="year">Year Group</string>
    <string name="year_summary">Choose what year groups you would like to receive push notifications for.</string>
    <string name="year_7">Year 7</string>
    <string name="year_8">Year 8</string>
    <string name="year_9">Year 9</string>
    <string name="year_10">Year 10</string>
    <string name="year_11">Year 11</string>
    <string name="year_12">Lower Sixth Form</string>
    <string name="year_13">Upper Sixth Form</string>
    <string name="yes">Yes</string>
</resources>