<?xml version="1.0" encoding="utf-8"?>
<com.jonny.wgsb.material.ui.widget.MultiSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_small">

            <RelativeLayout
                android:id="@+id/previousMonth"
                android:layout_width="40dip"
                android:layout_height="30dip"
                android:layout_alignParentLeft="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/arrow_left"
                    android:contentDescription="@string/previous" />
            </RelativeLayout>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dip"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/nextMonth"
                android:layout_width="40dip"
                android:layout_height="30dip"
                android:layout_alignParentRight="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/arrow_right"
                    android:contentDescription="@string/next" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <GridView
                android:id="@+id/gridview"
                android:layout_width="fill_parent"
                android:layout_height="320dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/padding_small"
                android:background="@color/colorPrimary"
                android:columnWidth="@dimen/calendar_column_width"
                android:listSelector="@android:color/transparent"
                android:numColumns="7"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large"
                android:stretchMode="columnWidth" />

            <TextView
                android:id="@+id/calendar_events"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/background_material_light"
                android:paddingLeft="@dimen/padding_large"
                android:paddingRight="@dimen/padding_large"
                android:text="@string/no_events"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</com.jonny.wgsb.material.ui.widget.MultiSwipeRefreshLayout>